[gd_scene load_steps=35 format=3 uid="uid://bs8jw2wy1bnbc"]

[ext_resource type="Script" uid="uid://cy5105yavs6sc" path="res://scripts/pig.gd" id="1_7e1yb"]
[ext_resource type="Texture2D" uid="uid://dylkq5gel7eb1" path="res://assets/pig/Pig/Attack.png" id="1_ct3s0"]
[ext_resource type="Texture2D" uid="uid://baw21jmffruuo" path="res://assets/pig/Pig/Idle.png" id="1_sq5kf"]
[ext_resource type="Texture2D" uid="uid://d2glt870jj4v" path="res://assets/pig/Pig/Run.png" id="2_4a8uq"]
[ext_resource type="Script" uid="uid://cjro5nrnlp4m" path="res://scripts/hitbox.gd" id="4_ct3s0"]
[ext_resource type="Texture2D" uid="uid://b70jni3gdc4yw" path="res://assets/pig/Pig/Dead.png" id="5_bnrkt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o1yuw"]
atlas = ExtResource("1_ct3s0")
region = Rect2(0, 0, 40, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ri28"]
atlas = ExtResource("1_ct3s0")
region = Rect2(40, 0, 40, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_menj8"]
atlas = ExtResource("1_ct3s0")
region = Rect2(80, 0, 40, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwvk4"]
atlas = ExtResource("1_ct3s0")
region = Rect2(120, 0, 40, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaxmj"]
atlas = ExtResource("1_ct3s0")
region = Rect2(160, 0, 40, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a8uq"]
atlas = ExtResource("1_sq5kf")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_j740r"]
atlas = ExtResource("1_sq5kf")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct3s0"]
atlas = ExtResource("1_sq5kf")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e1yb"]
atlas = ExtResource("1_sq5kf")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnrkt"]
atlas = ExtResource("1_sq5kf")
region = Rect2(80, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1p3k"]
atlas = ExtResource("1_sq5kf")
region = Rect2(100, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfkq4"]
atlas = ExtResource("1_sq5kf")
region = Rect2(120, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb7da"]
atlas = ExtResource("1_sq5kf")
region = Rect2(140, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ley84"]
atlas = ExtResource("1_sq5kf")
region = Rect2(160, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_udrue"]
atlas = ExtResource("1_sq5kf")
region = Rect2(180, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bhvn"]
atlas = ExtResource("1_sq5kf")
region = Rect2(200, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_klou0"]
atlas = ExtResource("2_4a8uq")
region = Rect2(0, 0, 23, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t1cl"]
atlas = ExtResource("2_4a8uq")
region = Rect2(23, 0, 23, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_crx00"]
atlas = ExtResource("2_4a8uq")
region = Rect2(46, 0, 23, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vth71"]
atlas = ExtResource("2_4a8uq")
region = Rect2(69, 0, 23, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_46381"]
atlas = ExtResource("2_4a8uq")
region = Rect2(92, 0, 23, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbdfm"]
atlas = ExtResource("2_4a8uq")
region = Rect2(115, 0, 23, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjtmk"]
atlas = ExtResource("5_bnrkt")
region = Rect2(0, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7tyu"]
atlas = ExtResource("5_bnrkt")
region = Rect2(50, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkd2u"]
atlas = ExtResource("5_bnrkt")
region = Rect2(100, 0, 50, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkbg"]
atlas = ExtResource("5_bnrkt")
region = Rect2(150, 0, 50, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_crx00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1yuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ri28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_menj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwvk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaxmj")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a8uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j740r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct3s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e1yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnrkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1p3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfkq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb7da")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ley84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udrue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bhvn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klou0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t1cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crx00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vth71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46381")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbdfm")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjtmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7tyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkd2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkbg")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j740r"]
size = Vector2(16, 16)

[node name="pig" type="Node2D" groups=["enemies"]]
script = ExtResource("1_7e1yb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_crx00")
animation = &"dead"
autoplay = "Idle"
frame = 3
frame_progress = 1.0

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)
collision_mask = 8

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)
collision_mask = 8

[node name="hitbox" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("4_ct3s0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_j740r")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
